# DriftDetector

./: .replit  README.md  main.py  pyproject.toml
drift_detector/: __init__.py  cli.py  get_drift.py  get_state.py  utils.py
drift_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
